...
                    android:layout_height="81dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/recommendation_icon"
                    tools:layout_editor_absoluteY="203dp" />

                <Button
                    android:id="@+id/recommendationB"
                    android:layout_width="210dp"
                    android:layout_height="78dp"
                    android:background="@android:color/transparent"
                    android:text="@string/recommendation"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />
...
